--- a/index.html
+++ b/index.html
@@ -20,9 +20,10 @@
                 <div class="col-5">
                     <img class="w-100" src="images/mac.png" alt="">
                 </div>
-                <!-- intro -->
+                <!-- Details Part -->
                 <div class="col-7">
                     <div class="details-section">
+                        <!-- intro -->
                         <div>
                             <h1>Customise your Blue 24-inch iMac with Apple M1 chip.</h1>
                             <p class="fw-normal">Apple M1 chip with 8-core CPU with 4 performance cores and 4 efficiency
@@ -34,27 +35,36 @@
                                 Magic
                                 Mouse Magic Keyboard - US English</p>
                         </div>
-                        <!-- Details -->
-                        <div class="mb-5">
-                            <h5 class="fw-bold mb-3">Memory</h5>
-                            <p class="border border-1 border-dark rounded p-2 d-inline highlight">8GB unified memory</p>
-                            <p class="border border-1 border-dark rounded p-2 d-inline highlight">16GB unified memory
-                            </p>
-                        </div>
-                        <div class="mb-5">
-                            <h5 class="fw-bold mb-3">Storage</h5>
-                            <p class="border border-1 border-dark rounded p-2  d-inline highlight">256GB SSD Storage</p>
-                            <p class="border border-1 border-dark rounded p-2 d-inline highlight">512GB SSD Storage</p>
-                            <p class="border border-1 border-dark rounded p-2 d-inline highlight">1TB SSD Storage</p>
-                        </div>
-                        <div class="mb-5">
-                            <h5 class="fw-bold mb-3">Choose Your Delivery Option</h5>
-                            <p class="border border-1 border-dark rounded p-2 d-inline highlight">Friday, Aug 25 FREE
-                                Prime
-                                Delivery</p>
-                            <p class="border border-1 border-dark rounded p-2 d-inline highlight">Friday, Aug 21
-                                Delivery
-                                Charge $20</p>
+                        <!-- config -->
+                        <div>
+                            <!-- memory -->
+                            <div class="mb-5">
+                                <h5 class="fw-bold mb-3">Memory</h5>
+                                <button type="button" class="btn btn-outline-secondary bg-hover">8GB unified
+                                    memory</button>
+                                <button type="button" class="btn btn-outline-secondary bg-hover">16GB unified
+                                    memory</button>
+                            </div>
+                            <!-- storage -->
+                            <div class="mb-5">
+                                <h5 class="fw-bold mb-3">Storage</h5>
+                                <button type="button" class="btn btn-outline-secondary bg-hover">256GB SSD
+                                    Storage</button>
+                                <button type="button" class="btn btn-outline-secondary bg-hover">512GB SSD
+                                    Storage</button>
+                                <button type="button" class="btn btn-outline-secondary bg-hover">1TB SSD
+                                    Storage</button>
+                            </div>
+                            <!-- delivery option -->
+                            <div class="mb-5">
+                                <h5 class="fw-bold mb-3">Choose Your Delivery Option</h5>
+                                <button type="button" class="btn btn-outline-secondary bg-hover">Friday, Aug 25 FREE
+                                    Prime
+                                    Delivery</button>
+                                <button type="button" class="btn btn-outline-secondary bg-hover">Friday, Aug 21
+                                    Delivery
+                                    Charge $20</button>
+                            </div>
                         </div>
 
                         <!-- Prices -->
@@ -146,6 +156,9 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-U1DAWAznBHeqEIlVSCgzq+c9gqGAJn5c/t99JyeKa9xxaYpSvHU5awsuZVVFIhvj"
         crossorigin="anonymous"></script>
+
+    <!-- javascript -->
+    <script src="js/app.js"></script>
 </body>
 
 </html>
