--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                                 Magic
                                 Mouse Magic Keyboard - US English</p>
                         </div>
-                        <!-- parts -->
+                        <!-- configuration -->
                         <div>
                             <!-- memory -->
                             <div class="mb-5">
