--- a/index.html
+++ b/index.html
@@ -41,11 +41,11 @@
                             <div class="mb-5">
                                 <h5 class="fw-bold mb-3">Memory</h5>
                                 <button id="default-memory" type="button" class="btn btn-outline-secondary bg-hover">8GB
-                                    unified
-                                    memory</button>
+                                    Unified
+                                    Memory</button>
                                 <button id="best-memory" type="button" class="btn btn-outline-secondary bg-hover">16GB
-                                    unified
-                                    memory</button>
+                                    Unified
+                                    Memory</button>
                             </div>
                             <!-- storage -->
                             <div class="mb-5">
